[metadata]
name = Flask-Coney
# Version needs regex in setup.py.
url = https://github.com/mikebarkmin/flask-coney
project_urls =
    Documentation = https://mikebarkmin.github.io/flask-coney
    Code = https://github.com/mikebarkmin/flask-coney
    Issue tracker = https://github.com/mikebarkmin/flask-coney/issues
license = MIT
license_files = LICENSE.rst
author = Mike Barkmin
author_email = mike@barkmin.eu
maintainer = Mike Barkmin
maintainer_email = mike@barkmin.eu
description = Add Pika support to your Flask application.
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
packages = find:
package_dir = = src
include_package_data = true
python_requires = >= 3.6
# Dependencies are in setup.py for GitHub's dependency graph.

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[tool:pytest]
testpaths = tests

[coverage:run]
branch = true
source =
    flask_coney
    tests

[coverage:paths]
source =
    src
    */site-packages

[flake8]
# B = bugbear
# E = pycodestyle errors
# F = flake8 pyflakes
# W = pycodestyle warnings
# B9 = bugbear opinions
# ISC = implicit-str-concat
select = B, E, F, W, B9, ISC
ignore =
    # slice notation whitespace, invalid
    E203
    # line length, handled by bugbear B950
    E501
    # bare except, handled by bugbear B001
    E722
    # bin op line break, invalid
    W503
# up to 88 allowed by bugbear B950
max-line-length = 80
